test_case/rust-lang_rust/25747_105658478.rs
 rust
struct A;
impl A {
    fn foo(a: &A) {}
}

let a = A;
a.foo(); // error
A::foo(&a); // ok
